// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/onboarding/pr/config-description getConfigDesc() assignees, labels and schedule 1`] = `
"
### Configuration Summary

Based on the default config's presets, Renovate will:

  - Start dependency updates only once this Configure Renovate PR is merged
  - Run Renovate on following schedule: before 5am

:abcd: Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch with your custom config and the list of Pull Requests in the \\"What to Expect\\" section below will be updated the next time Renovate runs.

---
"
`;

exports[`workers/repository/onboarding/pr/config-description getConfigDesc() returns a filtered list 1`] = `
"
### Configuration Summary

Based on the default config's presets, Renovate will:

  - Start dependency updates only once this Configure Renovate PR is merged
  - description 1
  - description two
  - something else

:abcd: Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch with your custom config and the list of Pull Requests in the \\"What to Expect\\" section below will be updated the next time Renovate runs.

---
"
`;

exports[`workers/repository/onboarding/pr/config-description getConfigDesc() returns a full list 1`] = `
"
### Configuration Summary

Based on the default config's presets, Renovate will:

  - Start dependency updates only once this Configure Renovate PR is merged
  - description 1
  - description two
  - something else
  - this is Docker-only

:abcd: Would you like to change the way Renovate is upgrading your dependencies? Simply edit the \`renovate.json\` in this branch with your custom config and the list of Pull Requests in the \\"What to Expect\\" section below will be updated the next time Renovate runs.

---
"
`;

exports[`workers/repository/onboarding/pr/config-description getConfigDesc() returns empty 1`] = `""`;
